# PhysSim-VLM

./: .gitignore  README.md  STRUCTURE.md  eval_kaggle.ipynb  launch_grpo.ps1  pyproject.toml  requirements.txt  run_grpo.bat  run_pipeline.sh  watchdog_eval.py  watchdog_eval.sh
analysis/: ablation.md  build_paper_assets.py  calibration.md  calibration.py  compute_receipt.md  cot_analysis.py  cot_length_buckets.csv  cot_summary.csv  cot_summary.md  failure_taxonomy.csv  failure_taxonomy.md  leaderboard_comparison.py  leaderboard_efficiency.md  leaderboard_headline.md  leaderboard_overall.md  leaderboard_per_task.md  output_samples.json  per_subtask.csv  per_subtask.md  qualitative_traces.md  refresh_with_grpo_r3.py  run2_metrics.csv  run2_metrics_deepdive.py  sample_grid.json  traces_and_failures.py
docs/: model_card.md
evaluation/: physbench_eval.py
paper/: README.md  example_paper.bib  physsim_paper.bbl  physsim_paper.tex
results/: README.md  canonical_numbers.json  external_summary.json  external_summary_smoke.json
scripts/: build_github_export.py  delete_intermediate_checkpoints.py  download_checkpoints_to_drive.py  eval_and_epoch2.sh  eval_external_physics.py  eval_physbench.py  eval_physbench_tinker.py  eval_physics_val.py  eval_seephys.py  generate_data.py  generate_fluid_numpy.py  generate_fluid_phiflow.py  generate_more.py  generate_plots.py  generate_plots_v2.py  generate_sample.py  generate_sft_r2_data.py  generate_taichi_fluid.py  generate_training_data.py  physics_env.py  plot_grpo_metrics.py  plot_loss_both.py  plot_training_metrics.py  rewards.py  (+12 more)
(+1 files in other folders)
