[project]
name = "vlm-physics"
version = "0.1.0"
description = "Teaching Vision-Language Models Physics Through Prediction and Simulation Feedback"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Swastik R"}
]
keywords = ["vlm", "physics", "machine-learning", "qwen", "vision-language-model"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "accelerate>=0.26.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vlm-physics = "inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
